# HTTP-Web-Server

./: CMakeLists.txt  README.md  Server.cpp  Server.h  appveyor.yml  filesystemrequesthandler.cpp  filesystemrequesthandler.h  helprequesthandler.cpp  helprequesthandler.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h  httputility.h  main.cpp  mimetypes.cpp  mimetypes.csv  mimetypes.h  stringrequesthandler.cpp  stringrequesthandler.h
libs/imgui/: imgui_applog.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_win32gl2.cpp
